[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[project]
name = "opal_fetcher_test_dynamodb"
version = "0.1.3" 
authors = [{name = "rola", email = "rjia41@gatech.edu"}]
description = "A short description of your package"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.6"
dependencies = [
    "boto3",
    "opal-common",
    "cachetools",
    "pydantic",
    "flask"
]
[project.urls]
"Homepage" = "https://github.com/rrrJiia/opal-fetcher-test-dynamoDB"
[tool.flit.sdist]
include = [
    "opal_fetcher_test_dynamoDB/__init__.py"
]